--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ rand = { version = "0.8.5", features = ["std"] }
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
 thiserror = "1.0.40"
-tui = { version = "0.19.0", features = ["crossterm", "serde"] }
+tui = { package = "ratatui", version = "0.20.0", features = ["crossterm", "serde"] }
